# Smarthome

./: .gitignore  1.1-Sprache_API-Liste.ods  1.1_APIs und Bibliotheke.txt  1.2_Pi_to_Pi.txt  1.3_Website_to_Server.txt  IPv4_Setup.ods  MS1-Theorie.txt  Planung.gan  Planung.txt  README.md  Smarthome.code-workspace  ip_list.txt  tcp stream.txt
Arduino_IR_Remote/: README.md
FrWeb-UI/: Readme.md  device_classes.js  index.html  script.js
NetzBlatt/: Konzept-Hochzeitswebsite.xopp  index.html  style.css  style.css.backup  text.html
PiSer-Broker/: Cargo.toml
PiSer-Broker/src/: main.rs  message_queue.rs
PiSer-Broker/src/client/: mod.rs  tcp_stream_writer.rs
PiSer-Modul/: Cargo.toml  Readme.md  cert.pem  key.rsa
PiSer-Modul/nosql_ids/: db.json
PiSer-Modul/src/: http_server.rs  input_control.rs  main.rs
PiSer-Modul/src/broker/: message_queue.rs  mod.rs  worker.rs
PiSer-Modul/src/broker/client/: mod.rs  mqtt_client.rs  mqtt_ws_client.rs  tcp_stream_reader.rs  tcp_stream_writer.rs  ws_stream_reader.rs  ws_stream_writer.rs
PiSer_Modul/: Cargo.toml  cert.pem  key.rsa
PiSer_Modul/FrWeb-UI/: device_classes.js  index.html  mqtt.js  script.js  style.css
PiSer_Modul/nosql_ids/: Rust_json_hinweise.txt  db.json  test_db.json
PiSer_Modul/src/: http_server.rs  main.rs  mqtt_broker.rs
PiSer_Modul/src/broker/: message_queue.rs  mod.rs  worker.rs
PiSer_Modul/src/broker/client/: mod.rs  tcp_read.rs  tcp_stream_handler.rs  tcp_stream_reader.rs  tcp_stream_writer.rs  tcp_write.rs
Raspi/: Readme.md  raspi_1B+_home.code-workspace  raspi_1B+_inet.code-workspace  (+2 more)
(+36 files in other folders)
