[package]
name = "pi_ser-Broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.3.1"
lunatic = "0.13.1"
mqtt_packet_3_5 = {version = "0.2.2", features = ["serde", "serde_support"]}
serde = "1.0.162"
