[package]
name = "pi_ser_modul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.4.0",features = ["rt","rt-multi-thread","macros"]}
warp = {version = "*",features = ["tls"]}
futures = "*"
ferris-says = "0.3.1"
local-ip = "0.1.0"
local-ip-address = "0.5.7"
fs = "0.0.5"
file = "1.1.2"
serde_json = "1.0.113"
serde = "1.0.196"
rustc-serialize = "0.3.25"
mqtt_packet_3_5 = "0.2.2"
rand = "0.8.5"
tokio-tungstenite = "0.21.0"
