[package]
name = "pi_ser_modul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.4.0",features = ["rt","rt-multi-thread","macros"]}
warp = {version = "*",features = ["tls"]}
futures = "*"
ferris-says = "0.3.1"
local-ip = "0.1.0"
local-ip-address = "0.5.7"
